Added CNAME for custom domain

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hima-estates",
-  "homepage": "https://meghashyam-nb.github.io/hima-estates",
+  "homepage": "https://www.himaestates.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
